update vor iism

--- a/wd/webui/index.html
+++ b/wd/webui/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="ext/spectre.css">
     <link rel="stylesheet" href="ext/spectre-icons.css">
     <link rel="icon" href="favicon.png">
-    <title>CCU-Jack</title>
+    <title>IISM-CCU-Api</title>
 </head>
 
 <body>
